[gd_scene load_steps=13 format=3 uid="uid://hghf53tjyueh"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_7rukl"]
[ext_resource type="PackedScene" uid="uid://bhplchb2q2ngm" path="res://GameScene.tscn" id="2_mr8bg"]
[ext_resource type="Script" path="res://Settings.gd" id="3_2kh7j"]
[ext_resource type="Script" path="res://Main.gd" id="3_23k7n"]
[ext_resource type="Script" path="res://ControlsMenu.gd" id="4_rl0j1"]
[ext_resource type="Script" path="res://ControlChangeButton.gd" id="5_wjbri"]
[ext_resource type="Script" path="res://PopupPanel.gd" id="6_xu1ap"]
[ext_resource type="Script" path="res://DeathScene.gd" id="8_6hb5i"]
[ext_resource type="Script" path="res://Credits.gd" id="9_2pnau"]
[ext_resource type="PackedScene" uid="uid://b8f2gd7iff7qn" path="res://Actors/poloroid.tscn" id="10_baiuk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ev5d"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqcix"]
bg_color = Color(0, 0, 0, 1)

[node name="MainScene" type="Node3D"]
script = ExtResource("1_7rukl")
game_prefab = ExtResource("2_mr8bg")

[node name="Menus" type="CanvasLayer" parent="."]

[node name="Main" type="PanelContainer" parent="Menus"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_23k7n")

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="Menus/Main/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Nako Day"

[node name="HSeparator" type="HSeparator" parent="Menus/Main/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/Main/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="NewGame" type="Button" parent="Menus/Main/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "New Game"

[node name="Settings" type="Button" parent="Menus/Main/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Settings"

[node name="Quit" type="Button" parent="Menus/Main/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit"

[node name="Settings" type="PanelContainer" parent="Menus"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_2kh7j")

[node name="All" type="VBoxContainer" parent="Menus/Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Options" type="HBoxContainer" parent="Menus/Settings/All"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Menus/Settings/All/Options"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Resolution" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Resolution
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FoV" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "FoV"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="MasterVolume" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Master"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolume" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "SFX
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolume" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Music"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="CameraScreenshots" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Camera Screenshots"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Menus/Settings/All/Options"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="Menus/Settings/All/Options"]
layout_mode = 2

[node name="Fullscreen" type="CheckButton" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
button_pressed = true

[node name="Resolution" type="HBoxContainer" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="X" type="SpinBox" parent="Menus/Settings/All/Options/Controls/Resolution"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
max_value = 20000.0
value = 1920.0
editable = false

[node name="Label" type="Label" parent="Menus/Settings/All/Options/Controls/Resolution"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "x"

[node name="Y" type="SpinBox" parent="Menus/Settings/All/Options/Controls/Resolution"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
max_value = 20000.0
value = 1080.0
editable = false

[node name="FoV" type="SpinBox" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 179.0
value = 90.0

[node name="HSeparator" type="HSeparator" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4

[node name="MasterVolume" type="HSlider" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
tick_count = 7
ticks_on_borders = true

[node name="SFXVolume" type="HSlider" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
tick_count = 7
ticks_on_borders = true

[node name="MusicVolume" type="HSlider" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
tick_count = 7
ticks_on_borders = true

[node name="HSeparator2" type="HSeparator" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4

[node name="CameraScreenshots" type="CheckButton" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
button_pressed = true

[node name="HSeparator" type="HSeparator" parent="Menus/Settings/All"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Controls" type="Button" parent="Menus/Settings/All"]
layout_mode = 2
text = "Change Button Mapping"

[node name="HSeparator2" type="HSeparator" parent="Menus/Settings/All"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Menus/Settings/All"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Apply" type="Button" parent="Menus/Settings/All/Buttons"]
layout_mode = 2
disabled = true
text = "Apply"

[node name="Back" type="Button" parent="Menus/Settings/All/Buttons"]
layout_mode = 2
text = "Back"

[node name="Controls" type="PanelContainer" parent="Menus"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rl0j1")

[node name="All" type="VBoxContainer" parent="Menus/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Options" type="HBoxContainer" parent="Menus/Controls/All"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Menus/Controls/All/Options"]
layout_mode = 2

[node name="Interact" type="Label" parent="Menus/Controls/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Interact"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UseNail" type="Label" parent="Menus/Controls/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Toggle Nail"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Menu" type="Label" parent="Menus/Controls/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Menu"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Forward" type="Label" parent="Menus/Controls/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Forward"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Back" type="Label" parent="Menus/Controls/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Back"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Left" type="Label" parent="Menus/Controls/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Left"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Right" type="Label" parent="Menus/Controls/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Right"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Menus/Controls/All/Options"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="Menus/Controls/All/Options"]
layout_mode = 2

[node name="Interact" type="Button" parent="Menus/Controls/All/Options/Controls"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
focus_mode = 0
text = "E"
clip_text = true
script = ExtResource("5_wjbri")
action = &"interact"

[node name="UseNail" type="Button" parent="Menus/Controls/All/Options/Controls"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
focus_mode = 0
text = "E"
clip_text = true
script = ExtResource("5_wjbri")
action = &"Use_Nail"

[node name="Menu" type="Button" parent="Menus/Controls/All/Options/Controls"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
focus_mode = 0
text = "E"
clip_text = true
script = ExtResource("5_wjbri")
action = &"menu"

[node name="Forward" type="Button" parent="Menus/Controls/All/Options/Controls"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
focus_mode = 0
text = "E"
clip_text = true
script = ExtResource("5_wjbri")
action = &"forward"

[node name="Back" type="Button" parent="Menus/Controls/All/Options/Controls"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
focus_mode = 0
text = "E"
clip_text = true
script = ExtResource("5_wjbri")
action = &"back"

[node name="Left" type="Button" parent="Menus/Controls/All/Options/Controls"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
focus_mode = 0
text = "E"
clip_text = true
script = ExtResource("5_wjbri")
action = &"left"

[node name="Right" type="Button" parent="Menus/Controls/All/Options/Controls"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
focus_mode = 0
text = "E"
clip_text = true
script = ExtResource("5_wjbri")
action = &"right"

[node name="HSeparator" type="HSeparator" parent="Menus/Controls/All"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Menus/Controls/All"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Reset" type="Button" parent="Menus/Controls/All/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Reset to Defaults"

[node name="Back" type="Button" parent="Menus/Controls/All/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Back"

[node name="PopupPanel" type="PanelContainer" parent="Menus/Controls"]
visible = false
layout_mode = 2
script = ExtResource("6_xu1ap")

[node name="Label" type="Label" parent="Menus/Controls/PopupPanel"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
text = "Press any button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathScene" type="PanelContainer" parent="Menus"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6ev5d")
script = ExtResource("8_6hb5i")

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/DeathScene"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Menus/DeathScene/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "YOU HAVE DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Menus/DeathScene/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "What a dead guy you are."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="Menus/DeathScene/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Continue"

[node name="Menu" type="Button" parent="Menus/DeathScene/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back to Menu"

[node name="DeathSound" type="AudioStreamPlayer" parent="Menus/DeathScene"]
bus = &"SFX"

[node name="Credits" type="PanelContainer" parent="Menus"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fqcix")
script = ExtResource("9_2pnau")
pic_prefab = ExtResource("10_baiuk")

[node name="Node" type="Node" parent="Menus/Credits"]

[node name="Credits" type="RichTextLabel" parent="Menus/Credits/Node"]
visible = false
custom_minimum_size = Vector2(300, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 422.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]
[b]Game by Yarnsh[/b]

[b]Game for Nako[/b]

Sounds from freesound.org
Some models from sketchfab.com
Materials from freepbr.com

Check out the detailed attributions on the github page or in the attributions.txt file

[b]Playtesters[/b]
Pirgah

Special thanks to Pirgah for helping with Blender stuff

Happy Birthday ╰(✿´⌣`✿)╯♡
[/center]"
fit_content = true

[node name="Poloroids" type="Node2D" parent="Menus/Credits"]
visible = false

[node name="Side1" type="Node2D" parent="Menus/Credits/Poloroids"]

[node name="Side2" type="Node2D" parent="Menus/Credits/Poloroids"]

[node name="Side3" type="Node2D" parent="Menus/Credits/Poloroids"]

[node name="Side4" type="Node2D" parent="Menus/Credits/Poloroids"]

[node name="GameScene" parent="." instance=ExtResource("2_mr8bg")]

[node name="MenuCam" type="Camera3D" parent="."]
transform = Transform3D(-0.577858, 0.0711311, -0.813032, 0, 0.996195, 0.0871557, 0.816138, 0.0503636, -0.575659, -24.392, 6.13508, -28.5984)

[connection signal="pressed" from="Menus/Main/VBoxContainer/VBoxContainer/NewGame" to="Menus/Main" method="new_game"]
[connection signal="pressed" from="Menus/Main/VBoxContainer/VBoxContainer/Settings" to="Menus/Main" method="settings"]
[connection signal="pressed" from="Menus/Main/VBoxContainer/VBoxContainer/Quit" to="Menus/Main" method="quit"]
[connection signal="toggled" from="Menus/Settings/All/Options/Controls/Fullscreen" to="Menus/Settings" method="_on_change"]
[connection signal="value_changed" from="Menus/Settings/All/Options/Controls/Resolution/X" to="Menus/Settings" method="_on_change"]
[connection signal="value_changed" from="Menus/Settings/All/Options/Controls/Resolution/Y" to="Menus/Settings" method="_on_change"]
[connection signal="value_changed" from="Menus/Settings/All/Options/Controls/FoV" to="Menus/Settings" method="_on_change"]
[connection signal="drag_ended" from="Menus/Settings/All/Options/Controls/MasterVolume" to="Menus/Settings" method="_on_change"]
[connection signal="drag_ended" from="Menus/Settings/All/Options/Controls/SFXVolume" to="Menus/Settings" method="_on_change"]
[connection signal="drag_ended" from="Menus/Settings/All/Options/Controls/MusicVolume" to="Menus/Settings" method="_on_change"]
[connection signal="toggled" from="Menus/Settings/All/Options/Controls/CameraScreenshots" to="Menus/Settings" method="_on_change"]
[connection signal="pressed" from="Menus/Settings/All/Controls" to="Menus/Settings" method="_on_controls_pressed"]
[connection signal="pressed" from="Menus/Settings/All/Buttons/Apply" to="Menus/Settings" method="_on_apply_pressed"]
[connection signal="pressed" from="Menus/Settings/All/Buttons/Back" to="Menus/Settings" method="_on_cancel_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Options/Controls/Interact" to="Menus/Controls/All/Options/Controls/Interact" method="_on_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Options/Controls/UseNail" to="Menus/Controls/All/Options/Controls/UseNail" method="_on_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Options/Controls/Menu" to="Menus/Controls/All/Options/Controls/Menu" method="_on_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Options/Controls/Forward" to="Menus/Controls/All/Options/Controls/Forward" method="_on_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Options/Controls/Back" to="Menus/Controls/All/Options/Controls/Back" method="_on_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Options/Controls/Left" to="Menus/Controls/All/Options/Controls/Left" method="_on_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Options/Controls/Right" to="Menus/Controls/All/Options/Controls/Right" method="_on_pressed"]
[connection signal="pressed" from="Menus/Controls/All/Buttons/Reset" to="Menus/Controls" method="reset"]
[connection signal="pressed" from="Menus/Controls/All/Buttons/Back" to="Menus/Controls" method="back"]
[connection signal="pressed" from="Menus/DeathScene/VBoxContainer/Continue" to="Menus/DeathScene" method="_on_continue_pressed"]
[connection signal="pressed" from="Menus/DeathScene/VBoxContainer/Menu" to="Menus/DeathScene" method="_on_menu_pressed"]
[connection signal="visibility_changed" from="Menus/Credits" to="Menus/Credits" method="_on_visibility_changed"]
